// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test blockchain operations AMOUNT 1`] = `
"
        (
            template_id (static_id 0 (\\"blockchain_properties.test.ts\\" 27))
            storage (variant \\"None\\" (unit) (\\"blockchain_properties.test.ts\\" 29))
            storage_type ((option \\"mutez\\"))
            messages ((ep1 True False False True (\\"blockchain_properties.test.ts\\" 31) ((set_type (params (\\"blockchain_properties.test.ts\\" 31)) \\"unit\\" (\\"blockchain_properties.test.ts\\" 34)) (set (data) (variant \\"Some\\" (amount) (\\"blockchain_properties.test.ts\\" 31)) (\\"blockchain_properties.test.ts\\" 31)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"blockchain_properties.test.ts\\" 27))
        )
        "
`;

exports[`Test blockchain operations AMOUNT 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"mutez\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"AMOUNT\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test blockchain operations BALANCE 1`] = `
"
        (
            template_id (static_id 0 (\\"blockchain_properties.test.ts\\" 27))
            storage (variant \\"None\\" (unit) (\\"blockchain_properties.test.ts\\" 29))
            storage_type ((option \\"mutez\\"))
            messages ((ep1 True False False True (\\"blockchain_properties.test.ts\\" 31) ((set_type (params (\\"blockchain_properties.test.ts\\" 31)) \\"unit\\" (\\"blockchain_properties.test.ts\\" 34)) (set (data) (variant \\"Some\\" (balance) (\\"blockchain_properties.test.ts\\" 31)) (\\"blockchain_properties.test.ts\\" 31)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"blockchain_properties.test.ts\\" 27))
        )
        "
`;

exports[`Test blockchain operations BALANCE 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"mutez\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"BALANCE\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test blockchain operations CHAIN_ID 1`] = `
"
        (
            template_id (static_id 0 (\\"blockchain_properties.test.ts\\" 27))
            storage (variant \\"None\\" (unit) (\\"blockchain_properties.test.ts\\" 29))
            storage_type ((option \\"chain_id\\"))
            messages ((ep1 True False False True (\\"blockchain_properties.test.ts\\" 31) ((set_type (params (\\"blockchain_properties.test.ts\\" 31)) \\"unit\\" (\\"blockchain_properties.test.ts\\" 34)) (set (data) (variant \\"Some\\" (chain_id) (\\"blockchain_properties.test.ts\\" 31)) (\\"blockchain_properties.test.ts\\" 31)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"blockchain_properties.test.ts\\" 27))
        )
        "
`;

exports[`Test blockchain operations CHAIN_ID 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"chain_id\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CAR\\"
                },
                {
                    \\"prim\\": \\"CHAIN_ID\\"
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test blockchain operations LEVEL 1`] = `
"
        (
            template_id (static_id 0 (\\"blockchain_properties.test.ts\\" 27))
            storage (variant \\"None\\" (unit) (\\"blockchain_properties.test.ts\\" 29))
            storage_type ((option \\"nat\\"))
            messages ((ep1 True False False True (\\"blockchain_properties.test.ts\\" 31) ((set_type (params (\\"blockchain_properties.test.ts\\" 31)) \\"unit\\" (\\"blockchain_properties.test.ts\\" 34)) (set (data) (variant \\"Some\\" (level) (\\"blockchain_properties.test.ts\\" 31)) (\\"blockchain_properties.test.ts\\" 31)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"blockchain_properties.test.ts\\" 27))
        )
        "
`;

exports[`Test blockchain operations LEVEL 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"nat\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CAR\\"
                },
                {
                    \\"prim\\": \\"LEVEL\\"
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test blockchain operations NOW 1`] = `
"
        (
            template_id (static_id 0 (\\"blockchain_properties.test.ts\\" 27))
            storage (variant \\"None\\" (unit) (\\"blockchain_properties.test.ts\\" 29))
            storage_type ((option \\"timestamp\\"))
            messages ((ep1 True False False True (\\"blockchain_properties.test.ts\\" 31) ((set_type (params (\\"blockchain_properties.test.ts\\" 31)) \\"unit\\" (\\"blockchain_properties.test.ts\\" 34)) (set (data) (variant \\"Some\\" (now) (\\"blockchain_properties.test.ts\\" 31)) (\\"blockchain_properties.test.ts\\" 31)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"blockchain_properties.test.ts\\" 27))
        )
        "
`;

exports[`Test blockchain operations NOW 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"timestamp\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"NOW\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test blockchain operations SELF 1`] = `
"
        (
            template_id (static_id 0 (\\"blockchain_properties.test.ts\\" 27))
            storage (variant \\"None\\" (unit) (\\"blockchain_properties.test.ts\\" 29))
            storage_type ((option (contract \\"unit\\")))
            messages ((ep1 True False False True (\\"blockchain_properties.test.ts\\" 31) ((set_type (params (\\"blockchain_properties.test.ts\\" 31)) \\"unit\\" (\\"blockchain_properties.test.ts\\" 34)) (set (data) (variant \\"Some\\" (self \\"\\" (\\"blockchain_properties.test.ts\\" 38)) (\\"blockchain_properties.test.ts\\" 31)) (\\"blockchain_properties.test.ts\\" 31)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"blockchain_properties.test.ts\\" 27))
        )
        "
`;

exports[`Test blockchain operations SELF 2`] = `"\\"import: params type yet unknown\\""`;

exports[`Test blockchain operations SELF_ADDRESS 1`] = `
"
        (
            template_id (static_id 0 (\\"blockchain_properties.test.ts\\" 27))
            storage (variant \\"None\\" (unit) (\\"blockchain_properties.test.ts\\" 29))
            storage_type ((option \\"address\\"))
            messages ((ep1 True False False True (\\"blockchain_properties.test.ts\\" 31) ((set_type (params (\\"blockchain_properties.test.ts\\" 31)) \\"unit\\" (\\"blockchain_properties.test.ts\\" 34)) (set (data) (variant \\"Some\\" (self_address) (\\"blockchain_properties.test.ts\\" 31)) (\\"blockchain_properties.test.ts\\" 31)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"blockchain_properties.test.ts\\" 27))
        )
        "
`;

exports[`Test blockchain operations SELF_ADDRESS 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"address\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"SELF_ADDRESS\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test blockchain operations SENDER 1`] = `
"
        (
            template_id (static_id 0 (\\"blockchain_properties.test.ts\\" 27))
            storage (variant \\"None\\" (unit) (\\"blockchain_properties.test.ts\\" 29))
            storage_type ((option \\"address\\"))
            messages ((ep1 True False False True (\\"blockchain_properties.test.ts\\" 31) ((set_type (params (\\"blockchain_properties.test.ts\\" 31)) \\"unit\\" (\\"blockchain_properties.test.ts\\" 34)) (set (data) (variant \\"Some\\" (sender) (\\"blockchain_properties.test.ts\\" 31)) (\\"blockchain_properties.test.ts\\" 31)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"blockchain_properties.test.ts\\" 27))
        )
        "
`;

exports[`Test blockchain operations SENDER 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"address\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"SENDER\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test blockchain operations SOURCE 1`] = `
"
        (
            template_id (static_id 0 (\\"blockchain_properties.test.ts\\" 27))
            storage (variant \\"None\\" (unit) (\\"blockchain_properties.test.ts\\" 29))
            storage_type ((option \\"address\\"))
            messages ((ep1 True False False True (\\"blockchain_properties.test.ts\\" 31) ((set_type (params (\\"blockchain_properties.test.ts\\" 31)) \\"unit\\" (\\"blockchain_properties.test.ts\\" 34)) (set (data) (variant \\"Some\\" (source) (\\"blockchain_properties.test.ts\\" 31)) (\\"blockchain_properties.test.ts\\" 31)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"blockchain_properties.test.ts\\" 27))
        )
        "
`;

exports[`Test blockchain operations SOURCE 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"address\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"SOURCE\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test blockchain operations TOTAL_VOTING_POWER 1`] = `
"
        (
            template_id (static_id 0 (\\"blockchain_properties.test.ts\\" 27))
            storage (variant \\"None\\" (unit) (\\"blockchain_properties.test.ts\\" 29))
            storage_type ((option \\"nat\\"))
            messages ((ep1 True False False True (\\"blockchain_properties.test.ts\\" 31) ((set_type (params (\\"blockchain_properties.test.ts\\" 31)) \\"unit\\" (\\"blockchain_properties.test.ts\\" 34)) (set (data) (variant \\"Some\\" (total_voting_power) (\\"blockchain_properties.test.ts\\" 31)) (\\"blockchain_properties.test.ts\\" 31)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"blockchain_properties.test.ts\\" 27))
        )
        "
`;

exports[`Test blockchain operations TOTAL_VOTING_POWER 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"nat\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CAR\\"
                },
                {
                    \\"prim\\": \\"TOTAL_VOTING_POWER\\"
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test blockchain operations VOTING_POWER 1`] = `
"
        (
            template_id (static_id 0 (\\"blockchain_properties.test.ts\\" 27))
            storage (variant \\"None\\" (unit) (\\"blockchain_properties.test.ts\\" 29))
            storage_type ((option \\"nat\\"))
            messages ((ep1 True False False True (\\"blockchain_properties.test.ts\\" 31) ((set_type (params (\\"blockchain_properties.test.ts\\" 31)) \\"unit\\" (\\"blockchain_properties.test.ts\\" 34)) (set (data) (variant \\"Some\\" (voting_power (literal (key_hash tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"blockchain_properties.test.ts\\" 38)) (\\"blockchain_properties.test.ts\\" 38)) (\\"blockchain_properties.test.ts\\" 31)) (\\"blockchain_properties.test.ts\\" 31)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"blockchain_properties.test.ts\\" 27))
        )
        "
`;

exports[`Test blockchain operations VOTING_POWER 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"nat\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"key_hash\\"
                        },
                        {
                            \\"string\\": \\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"VOTING_POWER\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;
